<resources>
    <string name="app_name">YMS</string>
    <string name="title_headlines">C I N E M A</string>
    <string name="powered_by_newsapi_org">Powered by - yms.xyz</string>
    <string name="news_api">News API</string>
    <string name="your">Your</string>
    <string name="api">MS</string>
    <string name="movies">Movies</string>
    <string name="detail">Detail</string>
    <string name="cast">Cast : </string>
    <string name="director">Director : </string>
    <string name="Synopsys">Synopsys : </string>

    <!--wave loading-->
    <string name="zero_percentage">0%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone">Mobile</string>
    <string name="card">Credit / Debit card number</string>
    <string name="mmyy">mm/yy</string>
    <string name="date">Date</string>
    <string name="cvv">cvv</string>

</resources>