<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/appBarLayout"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp24"
            android:paddingStart="@dimen/dp24"
            android:paddingTop="@dimen/dp24"
            android:paddingEnd="@dimen/dp24"
            android:paddingBottom="@dimen/dp90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/dp6"
                app:layout_constraintBottom_toTopOf="@id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/ivBackground"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/white"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/robotoslab_bold"
                android:maxLines="3"
                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="29sp"
                app:layout_constraintBottom_toTopOf="@id/tvType"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvAvgRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_round_star_24"
                android:fontFamily="@font/robotoslab_regular"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/tvType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvType" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab_bold"
                android:paddingTop="@dimen/dp4"
                android:text="@string/app_name"
                android:textColor="@color/warning"
                android:textSize="@dimen/sp16"
                app:layout_constraintBottom_toTopOf="@id/tvLabelCast"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp4"
                android:fontFamily="@font/robotoslab_bold"
                android:paddingTop="@dimen/dp6"
                android:text="@string/app_name"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/sp12"
                app:layout_constraintBottom_toTopOf="@id/tvLabelCast"
                app:layout_constraintStart_toEndOf="@id/tvType" />


            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab_bold"
                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/sp16"
                app:layout_constraintBottom_toBottomOf="@id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvLabelCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab_bold"
                android:paddingTop="@dimen/dp34"
                android:text="@string/cast"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvType" />

            <TextView
                android:id="@+id/tvCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab_bold"
                android:paddingTop="@dimen/dp6"
                android:text="@string/app_name"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelCast" />

            <TextView
                android:id="@+id/tvLabelDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab_bold"
                android:paddingTop="@dimen/dp20"
                android:text="@string/director"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCast" />

            <TextView
                android:id="@+id/tvDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab_bold"
                android:paddingTop="@dimen/dp6"
                android:text="@string/app_name"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelDirector" />

            <TextView
                android:id="@+id/tvLabelDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab_bold"
                android:paddingTop="@dimen/dp20"
                android:text="@string/Synopsys"
                android:textColor="@color/primaryTextColor"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDirector" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab_regular"
                android:paddingTop="@dimen/dp6"
                android:paddingBottom="@dimen/dp12"
                android:text="@string/app_name"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLabelDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnBuyNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/dp16"
        android:background="@drawable/capsule_button"
        android:fontFamily="@font/robotoslab_bold"
        android:text="Click for buy"
        android:textSize="@dimen/sp16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>